infrastructure/kubernetes/app-backend.yml
#
# The app proxy
#
---
#
# Deploy the pods
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-backend
  namespace: default
  labels:
    app: app-backend
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      name: app-backend
      namespace: default
      labels:
        app: app-backend
    spec:
      containers:
      - image: "teamdigitale/italia-backend:v0.0.59"
        name: app-backend
        ports:
        - name: http-port
          containerPort: 80
        volumeMounts:
          - name: certs
            mountPath: "/usr/src/app/certs"
            readOnly: true
        livenessProbe:
          httpGet:
            path: "/ping"
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 5
      volumes:
      - name: certs
        secret:
          # cert.pem, key.pem
          secretName: spid-cert

---
#
# A service exposing the app to the cluster.
#
apiVersion: v1
kind: Service
metadata:
  name: app-backend
  namespace: default
spec:
  selector:
    app: app-backend
  ports:
    - protocol: TCP
      port: 80
