infrastructure/kubernetes/pagopa-proxy.yml
#
# The pagopa-proxy
#
---
#
# Deploy the pods
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pagopa-proxy
  namespace: default
  labels:
    app: pagopa-proxy
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      name: pagopa-proxy
      namespace: default
      labels:
        app: pagopa-proxy
    spec:
      containers:
      - image: "teamdigitale/italia-pagopa-proxy:v0.5.0"
        name: pagopa-proxy
        ports:
        - name: http-port
          containerPort: 80
        livenessProbe:
          httpGet:
            path: "/"
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 5
---
#
# A service exposing the pagopa-proxy to the cluster.
#
apiVersion: v1
kind: Service
metadata:
  name: pagopa-proxy
  namespace: default
spec:
  type: NodePort
  selector:
    app: pagopa-proxy
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30010
