infrastructure/kubernetes/spid-testenv.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spid-testenv2
  namespace: default
  labels:
    app: spid-testenv2
    config-version: "1"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      name: spid-testenv2
      namespace: default
      labels:
        app: spid-testenv2
    spec:
      containers:
      - image: "italia/spid-testenv2"
        command: [ "python" ]
        args: [ "spid-testenv.py", "-c", "/app/conf/config.yml" ]
        name: spid-testenv2
        ports:
        - name: http-port
          containerPort: 8088
        volumeMounts:
          - name: conf
            mountPath: "/app/conf"
            readOnly: true
        livenessProbe:
          httpGet:
            path: "/"
            port: 8088
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 5
      volumes:
      - name: conf
        configMap:
          name: spid-testenv-configmap

---
#
# A service exposing the test IDP to the cluster.
#
apiVersion: v1
kind: Service
metadata:
  name: spid-testenv2
  namespace: default
spec:
  selector:
    app: spid-testenv2
  ports:
    - protocol: TCP
      port: 8088
